Fix code pattern warnings from the CI